# urfkill

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  RELEASE  autogen.sh  configure.ac
data/: Makefile.am  org.freedesktop.URfkill.Device.xml  org.freedesktop.URfkill.Killswitch.xml  org.freedesktop.URfkill.xml  urfkill-glib.pc.in  urfkill.conf
docs/: .gitignore  Makefile.am  clean.sh  urfkill-docs.xml  urfkill-sections.txt
docs/dbus/: .gitignore  Makefile.am
docs/man/: Makefile.am  urfkill.xml  urfkilld.xml
liburfkill-glib/: .gitignore  Makefile.am  urf-client.c  urf-client.h  urf-device.c  urf-device.h  urf-enum.h  urf-killswitch.c  urf-killswitch.h  urf-marshal.list  urf-version.h.in  urfkill.h
po/: .gitignore
policy/: .gitignore  Makefile.am  org.freedesktop.urfkill.policy.in
profile/: 10-asus-settings.xml  10-lenovo-settings.xml  10-qemu-settings.xml  Makefile.am  lenovo-profile.xml  profile.dtd
src/: .gitignore  Makefile.am  egg-debug.c  org.freedesktop.URfkill.conf.in  org.freedesktop.URfkill.service.in  org.freedesktop.URfkill.xml  urf-arbitrator.c  urf-arbitrator.h  urf-config.c  urf-config.h  urf-consolekit.c  urf-consolekit.h  urf-daemon.c  urf-daemon.h  urf-device-kernel.c  urf-device-kernel.h  urf-device-ofono.c  urf-device-ofono.h  urf-device.c  urf-device.h  urf-input.c  urf-input.h  urf-killswitch.c  urf-killswitch.h  urf-main.c  urf-marshal.list  urf-ofono-manager.c  urf-ofono-manager.h  urf-polkit.c  urf-polkit.h  urf-seat-consolekit.c  urf-seat-consolekit.h  urf-seat-logind.c  urf-seat-logind.h  urf-seat.c  urf-seat.h  urf-session-checker-consolekit.c  urf-session-checker-consolekit.h  urf-session-checker-logind.c  urf-session-checker-logind.h  (+7 more)
test/: .gitignore  urfkill-client.c
tests/: .gitignore  Makefile.am  catch-signal.c  device-write.c  enumerate-devices.c  inhibit-keycontrol.c  killswitch-write.c  monitor-killswitch.c  test-urfkill-client.c  urfkill-monitor.js
